# Practical-Task

01 uv/: README.md  pyproject.toml
01 uv/src/explore_uv/: __init__.py
